[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadqualenv"
version = "2.3.0"
description = "Deterministic benchmark for outbound lead qualification in real estate sales."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0",
    "gradio>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference"]

[tool.setuptools.packages.find]
include = ["leadqualenv*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "UP042", "UP045"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["openenv.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["server.models", "server.leadqualenv_environment"]
disable_error_code = ["misc"]
